# jemopt

./: Cargo.toml  datadog.yml  runfakeintake.sh  rust-toolchain.toml
src/: agent.rs  dogstatsd.rs  main.rs
