[package]
name = "jemopt"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.18.1"
clap = { version = "4.5.23", features = ["derive"] }
dogstatsd = "0.12.1"
futures = "0.3.31"
genetic_algorithm = "0.17.1"
rand = "0.8.5"
regex = "1.11.1"
tokio = { version = "1.42.0", features = ["full"] }
